fix: On smaller screen width, upload and the image preview fall below the Save, Cancel buttons

--- a/TelerikMvcWebMail/Content/new.scss
+++ b/TelerikMvcWebMail/Content/new.scss
@@ -71,11 +71,15 @@
         font: 18px Roboto;
         color: #333;
     }
+
+    .forms-panel {
+        margin-right: 40px;
+    }
     
 
     .upload-wrapper {
         width: 400px;
-        margin-left: 40px;
+        margin-bottom: 20px;
 
         .upload-image-wrapper {
             display: block;
@@ -92,6 +96,7 @@
 
 .form-buttons {
     padding: 15px 0;
+    clear: both;
 
     .k-button {
         padding: 5px 15px;
